[tool.poetry]
name = "seo-position-tracker"
homepage = "https://github.com/dimitryzub/seo-position-tracker"
version = "1.0.0"
description = "A simple Python package for SEO position tracking from Google and other search engines."
authors = ["Dimitry Zub <dimitryzub@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
google-search-results = "^2.4.1"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
